css/main.css
*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
body {
  font-family: 'Whitney SSm A', 'Whitney SSm B', 'Arial', sans-serif;
  font-style: normal;
  color: #444;
}
a {
  color: #2e4153;
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
}
a:hover {
  text-decoration: none;
  color: #19242e;
}
thead tr th {
  font-weight: 400;
}
h2 {
  font-size: 32px;
}
.title {
  font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', sans-serif;
  font-weight: 500;
  font-style: normal;
}
.btn {
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
}
.btn .fa {
  color: #fff;
  margin-right: 5px;
}
.btn-theme {
  background: #293a4a;
  border: 1px solid #293a4a;
  color: #fff;
}
.btn-theme:hover {
  background: #22303d;
  border: 1px solid #1f2c38;
  color: #fff;
}
.btn,
.alert,
.promo .overview .btn-group li a,
.features .content,
.features .content-overlay,
.install .server-auto img,
.install .server-auto input,
.install .client img,
.use-cases .item,
.editor,
.faq .item,
.api-endpoint pre,
.tutorial pre {
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  border-radius: 3px;
}
.social-icons {
  list-style: none;
  margin-bottom: 0;
}
.social-icons li {
  float: left;
}
.social-icons li a:last-child {
  margin-right: 0;
}
.social-icons a {
  display: inline-block;
  background: #293a4a;
  width: 48px;
  height: 48px;
  text-align: center;
  padding-top: 10px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
  margin-right: 8px;
  float: left;
}
.social-icons a:hover {
  background: #1f2c38;
}
.social-icons a .fa {
  color: #fff;
}
.social-icons a .fa:before {
  font-size: 30px;
  text-align: center;
  padding: 0;
}
.social-icons .mail .fa:before {
  font-size: 26px;
}
.offset-header {
  padding-top: 90px;
}
.footer {
  background-image: url('../img/background3.png');
  background-repeat: repeat;
  background-position: left top;
}
.header {
  padding: 15px 0;
  background: #fff;
  z-index: 9999;
  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
  -webkit-transition: 0.25s padding ease-in-out, 0.25s background ease-in-out;
  transition: 0.25s padding ease-in-out, 0.25s background ease-in-out;
}
.header.header-top {
  padding: 30px 0;
  background: transparent;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
}
.header h1.logo {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 55px;
  max-height: 50px;
  margin-top: -16px;
}
.header h1.logo .logo-title {
  font-family: 'Fredoka One', cursive;
  vertical-align: middle;
  color: #2e4153;
  -webkit-transition: 0.25s color ease-in-out;
  transition: 0.25s color ease-in-out;
}
.header.header-top h1.logo .logo-title {
  color: #fff;
}
.header .main-nav button {
  background: #2e4153;
  color: #fff !important;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
  -webkit-transition: 0.25s background ease-in-out;
  transition: 0.25s background ease-in-out;
}
.header.header-top .main-nav button {
  background: #fff;
}
.header .main-nav button:focus {
  outline: none;
}
.header .main-nav button .icon-bar {
  background-color: #fff;
}
.header.header-top .main-nav button .icon-bar {
  background-color: #2e4153;
  -webkit-transition: 0.25s background ease-in-out;
  transition: 0.25s background ease-in-out;
}
.header .main-nav .nav .nav-item {
  font-weight: 400;
  text-transform: uppercase;
  margin-right: 10px;
}
.header .main-nav .nav .nav-item a {
  color: #444;
  padding-left: 10px;
  padding-right: 10px;
  -webkit-transition: none;
  -moz-transition: none;
  -ms-transition: none;
  -o-transition: none;
  -webkit-transition: 0.25s color ease-in-out;
  transition: 0.25s color ease-in-out;
}
.header.header-top .main-nav .nav .nav-item a {
  color: rgba(255, 255, 255, 0.75);
}
.header .main-nav .nav .nav-item a:hover {
  color: #2e4153;
  background: none;
}
.header .main-nav .nav .nav-item a:focus {
  outline: none;
  background: none;
}
.header .main-nav .nav .nav-item a:active {
  outline: none;
  background: none;
}
.header .main-nav .nav .nav-item.last {
  margin-right: 0;
}
.header.header-top .navbar-collapse {
  margin-right: 0 !important;
  -webkit-transition: 0.25s margin-right ease-in-out;
  transition: 0.25s margin-right ease-in-out;
}
.header .twitter-logo,
.header .github-logo {
  z-index: 2000;
  position: fixed;
  top: 0;
  right: 0;
  border: 0;
  display: none;
  opacity: 0.9;
  visibility:visible;
  -webkit-transition: 0.25s opacity ease-in-out;
  transition: 0.25s opacity ease-in-out;
}
.header.header-top .twitter-logo,
.header.header-top .github-logo {
  opacity: 0;
  visibility: hidden;
}
.header .github-logo {
  right: 80px;
}
.header .twitter-logo:hover,
.header .github-logo:hover {
  opacity: 1;
}
.header.header-top .twitter-logo:hover,
.header.header-top .github-logo:hover {
  opacity: 0;
}
.header .twitter-logo img,
.header .github-logo img {
  width: 84px;
}
/* ... */

